<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/color_skb_red"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skb_lbs_noti"
            android:textColor="@color/color_fff"
            android:textSize="14dp" />

        <Button
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/ic_close"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_noti_guide"
            android:textColor="@color/color_555"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_car_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/car_no"
            android:textColor="@color/color_333"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_name"
            android:textColor="@color/color_333"
            android:textSize="13dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_commute"
                style="@style/LbsRadioButtonStyle"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/commute"
                android:textColor="@color/color_555"
                android:textSize="13dp" />

            <RadioButton
                android:id="@+id/rb_work"
                style="@style/LbsRadioButtonStyle"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/work"
                android:textColor="@color/color_555"
                android:textSize="13dp" />

        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:background="@drawable/edge_999999_open_left_bottom_side"
            android:text="@string/cancel"
            android:textColor="@color/color_222"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_passenger"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:background="@drawable/edge_999999_open_left_bottom_side"
            android:text="@string/passenger"
            android:textColor="@color/color_222"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_driver"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:background="@drawable/edge_999999_right_side"
            android:text="@string/driver"
            android:textColor="@color/color_222"
            android:textSize="16dp" />

    </LinearLayout>


</LinearLayout>